[package]
name = "Sable"
version = "0.1.0"
edition = "2024"

[dependencies] 
anyhow = "1.0"
winit = { version = "0.30", features = ["android-native-activity"] }
env_logger = "0.10"
log = "0.4"
wgpu = "29.0.3"
pollster = "0.3"
bytemuck = {version = "1.24", features = ["derive"] }
cgmath = "0.18"
tobj = { version = "4.0.2", features = ["async"]}
instant = "0.1.13"

[build-dependencies]
anyhow="1.0"
fs_extra="1.2"
glob="0.3"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

